[workspace]
members = [
    "azur_lane",
    "azur_lane_data_collector",
    "houston_app",
    "unity_read",
    "utils"
]
resolver = "1"

[profile.release]
lto = true
panic = 'abort'

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "c7540cd3ee97662a7494516ce58a26c83fcf9419" }
poise = { git = "https://github.com/serenity-rs/poise.git", rev = "575025909b063c3b998659abf9d241c8790404ee" }
