[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
serde = "1.0.197"
serde_json = "1.0"
once_cell = "1.19.0"
commands = { path = "../commands" }
utils = { path = "../utils" }
azur_lane = { path = "../azur_lane" }
