[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
poise = "0.6.1"
serde = "1.0.197"
serenity = { version = "0.12.1", features = ["simd_json"] }
simd-json = { version = "0.13.10", features = ["serde"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

azur_lane = { path = "../azur_lane" }
commands = { path = "../commands" }
utils = { path = "../utils" }
