[package]
name = "azur_lane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bitflags = "2.6.0"
once_cell = "1.19.0"

[dependencies.serde]
version = "1.0.204"
features = ["rc", "derive"]
