[package]
name = "azur_lane_data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
binrw = "0.13.3"
image = "0.24.9"
modular-bitfield = "0.11.2"
num_enum = "0.7.2"
lz4 = "1.24.0"
once_cell = "1.19.0"
serde_json = "1.0.117"

azur_lane = { path = "../azur_lane" }
unity_read = { path = "../unity_read" }
utils = { path = "../utils" }

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.mlua]
version = "0.9.7"
# luajit is not supported because the game scripts have an absurd amount of constants
features = ["lua54", "vendored"]

[dependencies.serde]
version = "1.0.201"
features = ["rc", "derive"]
