[package]
name = "azur_lane_data_collector"
version = "1.6.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
FileDescription = "Houston Tools Azur Lane Data Collector"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
serde_json = "1.0.128"

azur_lane = { path = "../azur_lane" }
unity_read = { path = "../unity_read" }
utils = { path = "../utils" }

[dependencies.clap]
version = "4.5.17"
features = ["derive"]

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["webp"]

[dependencies.mlua]
version = "0.9.9"
# luajit is not supported because the game scripts have an absurd amount of constants
features = ["lua54", "vendored"]

[dependencies.serde]
version = "1.0.209"
features = ["derive"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
