[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0" }
tokio = { version = "1.36.0", features = ["macros"] }
poise = "0.6.1"
chrono = "0.4.23"
chashmap = "2.2.2"
rand = "0.8.5"
utils = { path = "../utils" }
