[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1" }
tokio = { version = "1.36.0", features = ["macros"] }
simd-json = { version = "0.13.10", features = ["serde"] }
anyhow = "1.0.82"
poise = "0.6.1"
chrono = "0.4.23"
chashmap = "2.2.2"
rand = "0.8.5"
bitcode = { version = "0.6.0", features = ["derive"] }
once_cell = "1.19.0"
urlencoding = "2.1.3"
utils = { path = "../utils" }
azur_lane = { path = "../azur_lane" }
