[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bitcode = { version = "0.6.0", features = ["derive"] }
chrono = "0.4.23"
dashmap = "5.5.3"
once_cell = "1.19.0"
poise = "0.6.1"
urlencoding = "2.1.3"
rand = "0.8.5"
serenity = { version = "0.12.1" }
simd-json = { version = "0.13.10", features = ["serde"] }
tokio = { version = "1.36.0", features = ["macros"] }

azur_lane = { path = "../azur_lane" }
utils = { path = "../utils" }
