[package]
name = "houston_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
dashmap = "5.5.3"
env_logger = "0.11.5"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.204"
serde_bare = "0.5.0"
simd-json = { version = "0.13.10", features = ["serde"] }
simsearch = "0.2.5"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"

azur_lane = { path = "../azur_lane" }
utils = { path = "../utils" }

[dependencies.serenity]
# note: the workspace currently overrides this dependency to a specific commit
# so that we get new features without having poise select a different version
version = "0.12.2"
default-features = false
features = [
    "rustls_backend",
    "builder", "chrono", "client", "framework", "gateway", "model", "http", "utils", "simd_json"
]

[dependencies.poise]
version = "0.6.1"
default-features = false
features = [
    "chrono", "handle_panics"
]

[dependencies.config_rs]
package = "config"
version = "0.14.0"
default-features = false
features = ["toml"]
