[package]
name = "houston_app"
version = "1.6.3"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
FileDescription = "Houston Tools Discord Bot"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bitflags = "2.6.0"
chrono = "0.4.38"
dashmap = "5.5.3"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["serde"] }
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.210"
serde_bare = "0.5.0"
simd-json = { version = "0.13.10", features = ["serde"] }
simsearch = "0.2.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"

azur_lane = { path = "../azur_lane" }
utils = { path = "../utils" }

[dependencies.serenity]
# note: the workspace currently overrides this dependency to a specific commit
# so that we get new features without having poise select a different version
version = "0.12.2"
default-features = false
features = [
    "rustls_backend",
    "builder", "chrono", "client", "framework", "gateway", "model", "http", "utils", "simd_json"
]

[dependencies.poise]
version = "0.6.1"
default-features = false
features = [
    "chrono", "handle_panics"
]

[dependencies.config_rs]
package = "config"
version = "0.14.0"
default-features = false
features = ["toml"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
