[package]
name = "unity_read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
binrw = "0.14.0"
half = "2.4.1"
image = "0.24.9"
modular-bitfield = "0.11.2"
num_enum = "0.7.2"
lz4 = "1.26.0"
lzma-rs = "0.3.0"
once_cell = "1.19.0"
serde_json = "1.0.120"
texture2ddecoder = "0.1.1"

utils = { path = "../utils" }
