[package]
name = "utils"
version = "3.1.1"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
arrayvec = "0.7.6"
chrono = "0.4.38"

[dependencies.smallvec]
version = "1.13.2"
features = ["const_generics", "union"]
